<resources>

    <string name="title_activity_login">Sign in or create an account</string>
    <string name="title_activity_main">Dashboard</string>

    <!--Login-->
    <string name="app_name">B-Safe</string>
    <string name="login_welcome">Welcome to B-Safe!</string>
    <string name="login_subwelcome">Please login to access the app</string>
    <string name="login_pic_desc">This is a placeholder image. Please change the image and this description when the final version\'s coding started</string>
    <string name="login_email">Email:</string>
    <string name="login_password">Password:</string>
    <string name="login_button">Log In</string>
    <string name="action_have_account">Sudah memiliki akun?</string>
    <string name="action_register">Buat Akun Baru?</string>
    <string name="action_submit">Kirim</string>
    <!--Register-->
    <string name="register_welcome">First time using B-Safe?</string>
    <string name="register_subwelcome">Register now to start using this app</string>
    <string name="register_email">Email:</string>
    <string name="register_password">Password:</string>
    <string name="register_name">Full Name:</string>
    <string name="register_phone">Phone Number:</string>
    <string name="register_gender">Gender:</string>
    <string name="register_gender_male">Male</string>
    <string name="register_gender_female">Female</string>
    <string name="register_agreement">I agree with all the terms and conditions applied in this register.</string>
    <string name="register_button">Register</string>
    <string name="register_login_1">Already have an account?</string>
    <string name="register_login_2">Log in here</string>

    <!--Main Menu-->
    <!--Main Menu - Fragment A: News -->
    <string name="placeholder">This is news section</string>
    <!--Main Menu - Fragment B: Evac tips -->
    <string name="placeholder2">This is tips section</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_repeat">Password (Diulang)</string>
    <string name="prompt_name">Nama Lengkap</string>
    <string name="prompt_phone">Nomor Telepon</string>
    <string name="action_sign_in_short">masuk</string>

    <string name="error_invalid_email">Alamat email tidak valid</string>
    <string name="error_unavailable_email">Email sudah pernah terdaftar</string>
    <string name="error_invalid_password">Password tidak valid</string>
    <string name="error_invalid_password_repeat">Ulangi password dengan benar</string>
    <string name="error_incorrect_password">Password yang Anda masukkan salah</string>
    <string name="error_old_password">Password lama salah</string>
    <string name="error_field_required">Kolom ini tidak boleh dikosongi</string>
    <string name="permission_rationale">"Izin kontak diperlukan untuk menyediakan penyelesaian email."</string>
    <string name="login_header_information">Isilah form ini dengan akun login anda,
        atau buat akun terlebih dahulu untuk dapat menggunakan aplikasi ini.</string>
    <string name="log_out">Log Out</string>

</resources>