<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registerView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/registerWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/register_welcome"
        android:textSize="28sp"
        android:textStyle="bold"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/registerSubwelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_subwelcome"
        android:textSize="16sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerWelcome" />

    <ScrollView
        android:id="@+id/registerContainer"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/registerSubwelcome"
        tools:layout_editor_absoluteX="0dp">

        <LinearLayout
            android:id="@+id/fillLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/registerFullname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_name"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginTop="5dp"
                android:layout_marginStart="19dp"
                app:autoSizeTextType="uniform"/>

            <EditText
                android:id="@+id/nameFill"
                android:layout_width="380dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                />

            <TextView
                android:id="@+id/registerEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/register_email"
                android:textStyle="bold"
                android:layout_marginTop="5dp"
                android:layout_marginStart="19dp"
                app:autoSizeTextType="uniform"/>

            <EditText
                android:id="@+id/emailFill"
                android:layout_width="380dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/registerPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/register_phone"
                android:layout_marginTop="5dp"
                android:layout_marginStart="19dp"
                app:autoSizeTextType="uniform"/>

            <EditText
                android:layout_width="380dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/passFill"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_password"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginTop="5dp"
                android:layout_marginStart="19dp"
                app:autoSizeTextType="uniform"/>

            <EditText
                android:layout_width="380dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/genderFill"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_gender"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginTop="5dp"
                android:layout_marginStart="19dp"
                app:autoSizeTextType="uniform"/>

            <RadioGroup
                android:id="@+id/genderChoice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:layout_marginStart="19dp">

                <RadioButton
                    android:id="@+id/genderMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onGenderChosen"
                    android:text="@string/register_gender_male"/>

                <RadioButton
                    android:id="@+id/genderFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onGenderChosen"
                    android:text="@string/register_gender_female" />
            </RadioGroup>
        </LinearLayout>
    </ScrollView>

    <RadioGroup
        android:id="@+id/registerAgreement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@id/registerContainer"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/registerIAgree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onAgreementClicked"
            android:text="@string/register_agreement" />
    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/registerNow"
        android:layout_width="131dp"
        android:layout_height="52dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:text="@string/register_button"
        android:textSize="16sp"
        app:backgroundTint="@android:color/holo_blue_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerAgreement"
        android:onClick="registerNowFromRegister"
        tools:ignore="OnClick" />

    <TextView
        android:id="@+id/register_login1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="96dp"
        android:text="@string/register_login_1"
        android:textSize="16sp"
        android:textStyle="bold"
        app:autoSizeTextType="uniform"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerAgreement" />

    <TextView
        android:id="@+id/register_login2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:text="@string/register_login_2"
        android:textColor="#00BCD4"
        android:textSize="16sp"
        android:textStyle="bold"
        android:onClick="loginNowFromRegister"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toEndOf="@id/register_login1"
        app:layout_constraintTop_toBottomOf="@+id/registerAgreement" />


</androidx.constraintlayout.widget.ConstraintLayout>

