<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#FFFFFF"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/loginPic"
        android:layout_width="146dp"
        android:layout_height="140dp"
        android:layout_marginTop="52dp"
        android:contentDescription="@string/login_pic_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ramen" />

    <TextView
        android:id="@+id/loginSubwelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/login_subwelcome"
        android:textSize="16sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginWelcome" />

    <TextView
        android:id="@+id/loginWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/login_welcome"
        android:textSize="28sp"
        android:textStyle="bold"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginPic" />

    <EditText
        android:id="@+id/emailFill"
        android:layout_width="355dp"
        android:layout_height="wrap_content"
        android:inputType="textLongMessage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginEmail" />

    <TextView
        android:id="@+id/loginEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="8dp"
        android:text="@string/login_email"
        android:textSize="16sp"
        android:textStyle="bold"
        app:autoSizeTextType="uniform"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginSubwelcome" />

    <EditText
        android:id="@+id/passFill"
        android:layout_width="355dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:inputType="textLongMessage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginPassword" />

    <TextView
        android:id="@+id/loginPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/login_password"
        android:textSize="16sp"
        android:textStyle="bold"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.083"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginEmail" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginButton"
        android:layout_width="108dp"
        android:layout_height="53dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="@android:color/holo_green_dark"
        android:text="@string/login_button"
        android:textSize="16sp"
        android:onClick="loginNowFromLogin"
        app:backgroundTint="@android:color/holo_green_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.913"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passFill" />

    <TextView
        android:id="@+id/signup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="100dp"
        android:text="@string/login_signup_1"
        android:textSize="16sp"
        android:textStyle="bold"
        app:autoSizeTextType="uniform"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passFill" />

    <TextView
        android:id="@+id/signup2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="100dp"
        android:onClick="registerNowFromLogin"
        android:text="@string/login_signup_2"
        android:textColor="#00BCD4"
        android:textSize="16sp"
        android:textStyle="bold"
        app:autoSizeTextType="uniform"
        app:layout_constraintStart_toEndOf="@+id/signup1"
        app:layout_constraintTop_toBottomOf="@+id/passFill" />


</androidx.constraintlayout.widget.ConstraintLayout>